@@ -93,7 +93,7 @@ def main():
         _.join()
 
     if args.report_total_kmers:
-        print >> sys.stderr, 'Total number of k-mers: {}'.format(
+        print >> sys.stderr, 'Total number of k-mers: {0}'.format(
             htable.n_occupied())
 
     fp_rate = khmer.calc_expected_collisions(htable)
