@@ -89,7 +89,7 @@ def main():
             thread.join()
 
     if args.report_total_kmers:
-        print >> sys.stderr, 'Total number of k-mers: {}'.format(
+        print >> sys.stderr, 'Total number of k-mers: {0}'.format(
             htable.n_occupied())
 
     print 'saving k-mer presence table in', base + '.pt'
